# django-mongo

./: LICENSE  README.md
DjangoMongo/: .gitignore  pyproject.toml
DjangoMongo/apps/cards/: models.py  views.py
DjangoMongo/apps/cards/migrations/: 0001_initial.py
DjangoMongo/apps/decks/: models.py  urls.py  views.py
DjangoMongo/apps/decks/migrations/: 0001_initial.py
DjangoMongo/config/: asgi.py  settings.py  urls.py  wsgi.py
